[package]
name = "binary-storage-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.5.0", features = ["serde"] }
byteorder = "1.5.0"
anyhow = "1.0.82"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
phf = { version = "0.11.2", features = ["macros"] }

# competitors
bincode = "1.3.3"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

# testing human helpers
bytesize = "1.3.0"
humantime = "2.1.0"
rand = "0.8.5"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "binary_storage_test"
harness = false
